Fixed the bug with datatable index column visibility on page change

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -4,13 +4,19 @@
  * DataTable
  */
 .card-header#datatableCardHeader {border-bottom: 1px solid #dee2e6; padding-right: 28px;}
+.card-header#datatableCardHeader h1 {font-family: "Roboto" sans-serif}
+.card-header#datatableCardHeader button {font-family: "Roboto" sans-serif}
 .dataTables_length select{ font-size: 13px}
 .dataTable thead i { color: #a6a6a6 }
 .dataTable .btn-link-delete {padding: 0; border:none; height: 24px}
 .dataTable .btn-edit {padding: 0; border:none; height: 24px;}
 .dataTable.no-footer { border-bottom: 1px solid #e6e6e6  !important; }
-.dataTable tr td:first-child {text-align: center}
+.dataTable tr td:first-child {text-align: center;}
 .dataTable tr td:last-child {text-align: center;}
+.pagination li.page-item a.page-link{border: none}
+/*.pagination li.page-item.active a.page-link {font-weight: bold; color: #777; background: #fff; border: 1px solid #E3342F}*/
+.pagination li.page-item.active a.page-link {background: #EF5753;}
+
 
 /*.dataTables_wrapper {font-size: 13px; font-family: "Roboto"; color: #777}*/
 /*.dataTables_length {font-family: "Roboto" sans-serif; font-size: 13px; }*/
@@ -22,9 +28,10 @@
     background: #f5f8fc !important;
 }
 */
+
+/* Highlight the sorting column */
 /*td.sorting_1 { background: #F8F9FA }
-td.sorting_1:hover { background: #d2d9df !important }
-*/
+td.sorting_1:hover { background: #d2d9df !important }*/
 
 /*
  * DataTable responsive
